--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Gestão da Tecnologia da Informação</h1>
     <h3>Faculdade de tecnologia de Tatuí</h3>
+    <h4>Desenvolvedor: Hiago</h4>
+    <hr>versão 1.0 - @copyright
+    <h5>versão 1.0 - @copyright</h5>
+    <marquee>Finalizando projeto Git e Github</marquee>
 </body>
 </html>
